fix: fix a styling error causing horizontal scroll bars in browser-app app

--- a/apps/browser-app/src/components/top-bar/top-bar.component.scss
+++ b/apps/browser-app/src/components/top-bar/top-bar.component.scss
@@ -4,9 +4,14 @@
 
 .brand-name {
   text-decoration: none;
-  margin: 0 16px;
+  margin: 0 8px;
+  padding: 8px;
 }
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.button {
+  margin: 0 8px 0 0;
 }
